k8s/overlays/shared-storage/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: multimodal-fashion-recommender
  namespace: mfs
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: "300m"
              memory: "1Gi"
            limits:
              cpu: "1500m"
              memory: "3Gi"
      volumes:
        - $patch: replace
        - name: data-volume
          persistentVolumeClaim:
            claimName: mfs-data-pvc
        - name: model-volume
          persistentVolumeClaim:
            claimName: mfs-models-pvc
        - name: als-config
          configMap:
            name: mfs-als-config
