k8s/overlays/shared-storage/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multimodal-fashion-recommender
  namespace: mfs
spec:
  rules:
    - host: fashion.local
